Merge pull request #733 in CLOUD/datasphere from lzy#python_run to master
Squashed commit of the following:

commit 2d1254999205bb4cc3c276f29bc82cdc05ea2bfb
Author: tomato <tomato@yandex-team.ru>
Date:   Thu Sep 23 15:45:08 2021 +0300

    unused imports

commit c936e88ef6fbc4e42eefcf545a7e10ff2368f801
Author: tomato <tomato@yandex-team.ru>
Date:   Thu Sep 23 15:44:20 2021 +0300

    destroy before status

commit 882bd56bad71dc20975466aaab717d4035be16e0
Author: tomato <tomato@yandex-team.ru>
Date:   Thu Sep 23 14:17:16 2021 +0300

    do not create non-dev slots in run

commit c2ce5cb98ca31cc5d0420567777796753ce2f9a2
Author: tomato <tomato@yandex-team.ru>
Date:   Thu Sep 23 11:03:23 2021 +0300

    tiny refactoring

commit 92f1aa3891b7a52a1eadb0caf797f0068a6d71eb
Author: tomato <tomato@yandex-team.ru>
Date:   Wed Sep 22 22:07:44 2021 +0300

    lzy touch: fix cmd parsing

commit 8d19ac0419295ba3fc5949e88ab9baef42017382
Author: tomato <tomato@yandex-team.ru>
Date:   Wed Sep 22 19:11:46 2021 +0300

    test works

commit 8aa5a5162be7988c1087b0cbbfabd1089faee8ca
Author: tomato <tomato@yandex-team.ru>
Date:   Wed Sep 22 18:15:49 2021 +0300

    fix deadlock

commit 5e8966965cb42c357be060add0233e0f34b14d64
Author: tomato <tomato@yandex-team.ru>
Date:   Wed Sep 22 17:54:21 2021 +0300

    more logs & open out file slot

commit 9503384e91763bbc31216a411abfaba7427f9f0c
Merge: 5bfb91f341 0534a5d689
Author: d-kruchinin <d-kruchinin@yandex-team.ru>
Date:   Wed Sep 22 15:44:45 2021 +0300

    merged

commit 5bfb91f3411f3cfa74bbd0ff3b67a10c684e0f95
Merge: 5224ad197b 36b49f2888
Author: d-kruchinin <d-kruchinin@yandex-team.ru>
Date:   Wed Sep 22 15:39:49 2021 +0300

    local slot problems like white people problems

commit 0534a5d689dff773b54bdbb2e3e4a1aab5f63a23
Author: tomato <tomato@yandex-team.ru>
Date:   Wed Sep 22 14:30:18 2021 +0300

    lzy execution: sync on slots

commit 6426f889a3259189f705ae124284b81157147621
Author: tomato <tomato@yandex-team.ru>
Date:   Wed Sep 22 1